kcms/gamecontroller: Fix UB to use of uninitialized memory

In the else case sys_path was never initialized resulting
in random memory being passed into udev_device_new_from_syspath
what results in undefined behavior.

Based on a patch done by Adam Doda.

BUG: 522886